???? 0.9.18.8
    programmer visible changes:
    * implemented requirement_of filed in InstallItem
    * iids_from_guid check if input is guid and return the original iid if not. This will save checking by claaer of iids_from_guid.

5/11/2014 0.9.18.6

    user visible changes, client:
    * New optional variable INSTL_MINIMAL_VERSION will be compared to current instl version,
        raise exception if INSTL_MINIMAL_VERSION > __INSTL_VERSION__. Can be used to check
        compatibility between input file and instl reading it.
    * Improved removal of !dir_cont and !files sources.

4/11/2014 0.9.18.4

    user visible changes, client:
    * Enabled the removal of !dir_cont and !files sources.
    * Reading a user config file if such file exists. User config file named
        instl_config.yaml can be placed in the home folder,
        format is regular instl !define format.
        File name is in variable __USER_CONFIG_FILE_NAME__.
    * Better error message when public key cannot be determined.

    programmer visible changes:
    * Fixed the regex to find wtar versions of files to handle spaces in file names.

2/11/2014 0.9.18.1

    * It's possible now to install sources from any folder regardless of OS. This mainly enables the uses
        of Common folder in the same level of Win and Mac.

    user visible changes, client:
    * Moved the curl files to $(LOCAL_REPO_BOOKKEEPING_DIR)/curl instead of $(LOCAL_REPO_SYNC_DIR)/curl
    * LOCAL_REPO_SOURCES_DIR varaible is no longer used, use $(LOCAL_REPO_SYNC_DIR) instead.
    * new internal variable: __USER_HOME_DIR__ will point to the local home folder of the user.

    user visible changes, admin:
    * Install sources starting with '/' are absolute.
    * Install sources starting with '$(' are explicitly relative to that prefix variable.
    * Other install source remain relative to $(SOURCE_PREFIX).

30/10/2014 0.9.17.1

    user visible changes, client: